Problem duplicating after selecting from outliner, and lots of console error messages after deleting child bones #82347

Closed
opened 2020-11-03 02:55:10 +01:00 by Mark Stead · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0
Also broken in the latest build: 2.91.0 Beta, branch: master, commit date: 2020-11-02 13:28, hash: 42f6aada98
Worked: 2.80

Short description of error
I am able to duplicate a bone from the 3D viewport, but when selecting the same bone from the Outliner, duplicate does nothing.
Plus I'm seeing lots of concerning errors in the console.

Exact steps for others to reproduce the error
I'll attach the same file I was playing with yesterday (the subject of a separate bug report).
Train Bogey Test.blend
Upon opening the file I see this message in the console - I don't know if it's important - but it happens frequently.

add_operation: Operation already exists - 16)Carriage3Back : OBMovementRig( affects_directly_visible: false) has POSE_SPLINE_IK_SOLVER() at 000002D205F09C98

Select the TrainRig object in the Outliner.
Enter Edit mode.
Scroll down and click on the bone BogeyBack in the Outliner.
Press Shift+D to duplicate.
Nothing happens.
Instead click on the same bone in the 3D viewport.
Press Shift+D to duplicate, and the duplication works - place the new bone (BogeyBack.001) somewhere.
Delete that new bone and there is another message in the console.

Note there are two Armatures in the model. "MovementRig" has a bone chain with Spline IK constraint. The "TrainRig" uses the constrains Copy Location, Copy Rotation and Track To, based on bones in the MovementRig.

I then thought I would experiment and see which bones could be duplicated.
Selecting Wheel3 or Wheel4 (from the Outliner) and duplicating is successful. Note these bones have no constraints.
Select TrackingBack (from the Outliner) and duplicate, and that is successful too - even though it has a bone constraint.
Likewise I am able to duplicate Carriage1Root which has 3 bone constraints.

Then I thought I would try deleting the Wheel3 and Wheel4 bones.
Duplicating BogeyBack (after selecting from the Outliner) still doesn't work.

At this point I thought I would remove the bone constraint from BogeyBack.
Enter Pose mode, and in the console you see these error messages:

add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel3'))
add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.002, TRANSFORM)) was ok
add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel4'))
add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.003, TRANSFORM)) was ok
ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.003 with Bone parent: bone Wheel4 doesn't exist
ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.002 with Bone parent: bone Wheel3 doesn't exist

Delete the bone constraint, and in the console you see similar messages again:

add_operation: Operation already exists - 16)Carriage3Back : OBMovementRig( affects_directly_visible: false) has POSE_SPLINE_IK_SOLVER() at 000002D20ADBA128
add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel3'))
add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.002, TRANSFORM)) was ok
add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel4'))
add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.003, TRANSFORM)) was ok
ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.003 with Bone parent: bone Wheel4 doesn't exist
ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.002 with Bone parent: bone Wheel3 doesn't exist

Returning to Edit mode, I'm still unable to Duplicate BogeyBack, when selecting from the outliner.

Finally I though, what if I delete BogeyBack, and you get more of the errors above.

FWIW, I raised #82316 about a bone parenting issue yesterday. Do you think my file is somehow corrupted now?

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` Also broken in the latest build: 2.91.0 Beta, branch: master, commit date: 2020-11-02 13:28, hash: `42f6aada98` Worked: 2.80 **Short description of error** I am able to duplicate a bone from the 3D viewport, but when selecting the same bone from the Outliner, duplicate does nothing. Plus I'm seeing lots of concerning errors in the console. **Exact steps for others to reproduce the error** I'll attach the same file I was playing with yesterday (the subject of a separate bug report). [Train Bogey Test.blend](https://archive.blender.org/developer/F9174332/Train_Bogey_Test.blend) Upon opening the file I see this message in the console - I don't know if it's important - but it happens frequently. ``` add_operation: Operation already exists - 16)Carriage3Back : OBMovementRig( affects_directly_visible: false) has POSE_SPLINE_IK_SOLVER() at 000002D205F09C98 ``` Select the TrainRig object in the Outliner. Enter Edit mode. Scroll down and click on the bone BogeyBack in the Outliner. Press Shift+D to duplicate. Nothing happens. Instead click on the same bone in the 3D viewport. Press Shift+D to duplicate, and the duplication works - place the new bone (BogeyBack.001) somewhere. Delete that new bone and there is another message in the console. Note there are two Armatures in the model. "MovementRig" has a bone chain with Spline IK constraint. The "TrainRig" uses the constrains Copy Location, Copy Rotation and Track To, based on bones in the MovementRig. I then thought I would experiment and see which bones could be duplicated. Selecting Wheel3 or Wheel4 (from the Outliner) and duplicating is successful. Note these bones have no constraints. Select TrackingBack (from the Outliner) and duplicate, and that is successful too - even though it has a bone constraint. Likewise I am able to duplicate Carriage1Root which has 3 bone constraints. Then I thought I would try deleting the Wheel3 and Wheel4 bones. Duplicating BogeyBack (after selecting from the Outliner) still doesn't work. At this point I thought I would remove the bone constraint from BogeyBack. Enter Pose mode, and in the console you see these error messages: ``` add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel3')) add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.002, TRANSFORM)) was ok add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel4')) add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.003, TRANSFORM)) was ok ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.003 with Bone parent: bone Wheel4 doesn't exist ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.002 with Bone parent: bone Wheel3 doesn't exist ``` Delete the bone constraint, and in the console you see similar messages again: ``` add_operation: Operation already exists - 16)Carriage3Back : OBMovementRig( affects_directly_visible: false) has POSE_SPLINE_IK_SOLVER() at 000002D20ADBA128 add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel3')) add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.002, TRANSFORM)) was ok add_relation(Bone Parent) - Could not find op_from (ComponentKey(OBTrainRig, BONE, 'Wheel4')) add_relation(Bone Parent) - Failed, but op_to (ComponentKey(OBWheels.003, TRANSFORM)) was ok ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.003 with Bone parent: bone Wheel4 doesn't exist ERROR (bke.object): C:\b\buildbot-worker-windows\windows_290\blender.git\source\blender\blenkernel\intern\object.c:2458 ob_parbone: Object Wheels.002 with Bone parent: bone Wheel3 doesn't exist ``` Returning to Edit mode, I'm still unable to Duplicate BogeyBack, when selecting from the outliner. Finally I though, what if I delete BogeyBack, and you get more of the errors above. FWIW, I raised #82316 about a bone parenting issue yesterday. Do you think my file is somehow corrupted now?
Author

Added subscriber: @MarkStead-2

Added subscriber: @MarkStead-2

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

When I opened this file in a Debug build, I came across this assert:

BLI_assert failed: ...\source\blender\depsgraph\intern\builder\deg_builder_nodes.cc:226, add_operation_node(), at '!"Should not happen!"'

Perhaps the problem is much more internal.
I believe that before investigating further, it would be better to have this assert resolved.

I tested it in 2.80 and the duplicate operator worked fine there. So this seems to be a regression

I am confirming the bug due to the assert and the possible regression.
The sample file could still be simplified further.

When I opened this file in a Debug build, I came across this assert: ``` BLI_assert failed: ...\source\blender\depsgraph\intern\builder\deg_builder_nodes.cc:226, add_operation_node(), at '!"Should not happen!"' ``` Perhaps the problem is much more internal. I believe that before investigating further, it would be better to have this assert resolved. I tested it in 2.80 and the duplicate operator worked fine there. So this seems to be a regression I am confirming the bug due to the assert and the possible regression. The sample file could still be simplified further.
Sybren A. Stüvel self-assigned this 2020-11-05 10:41:40 +01:00

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

This comment was removed by @dr.sybren

*This comment was removed by @dr.sybren*
Sybren A. Stüvel removed their assignment 2020-11-05 11:04:13 +01:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-11-05 12:57:31 +01:00

This issue was referenced by 28e703b0a1

This issue was referenced by 28e703b0a104f8c8c64dee835d9fd3e657ac86cf
Member

So (first) issue should be solved by D9470: Fix Outliner editbone selection with 'Sync Selection'

Will now check what is going on with the depsgraph relation asserts.

So (first) issue should be solved by [D9470: Fix Outliner editbone selection with 'Sync Selection'](https://archive.blender.org/developer/D9470) Will now check what is going on with the depsgraph relation asserts.

This issue was referenced by dad228a19c

This issue was referenced by dad228a19cc4b2ae8436eeb927fb42b32d4e1824
Member

Second issue (the !"Should not happen!"' Assert) stems from having two (or more) SplineIK constraints having the same root bPoseChannel.
Should be solved by D9471: Fix asserts when two (or more) SplineIK constraints have the same root

Second issue (the !"Should not happen!"' Assert) stems from having two (or more) SplineIK constraints having the same root `bPoseChannel`. Should be solved by [D9471: Fix asserts when two (or more) SplineIK constraints have the same root](https://archive.blender.org/developer/D9471)
Member

I think the remaining errors are actually from parenting being broken for a couple of days - which is resolved now (not totally sure though, but not getting these Bone parent relation errors anymore...)

I *think* the remaining errors are actually from parenting being broken for a couple of days - which is resolved now (not totally sure though, but not getting these Bone parent relation errors anymore...)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Both 28e703b0a1 and dad228a19c are now in.
Please check with tomorrows builds from https://builder.blender.org/download/.

will close as resolved, but feel free to comment again if issues persist in tomorrows fresh builds.

Both 28e703b0a1 and dad228a19c are now in. Please check with tomorrows builds from https://builder.blender.org/download/. will close as resolved, but feel free to comment again if issues persist in tomorrows fresh builds.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82347
No description provided.