source/blender/editors/space_outliner/outliner_select.c
@@ -714,20 +714,9 @@ static eOLDrawState tree_element_active_bone(bContext *C,
 static void tree_element_active_ebone__sel(bContext *C, bArmature *arm, EditBone *ebone, short sel)
 {
   if (sel) {
-    ebone->flag |= BONE_SELECTED | BONE_ROOTSEL | BONE_TIPSEL;
     arm->act_edbone = ebone;
-    /* Flush to parent? */
-    if (ebone->parent && (ebone->flag & BONE_CONNECTED)) {
-      ebone->parent->flag |= BONE_TIPSEL;
-    }
   }
-  else {
-    ebone->flag &= ~(BONE_SELECTED | BONE_ROOTSEL | BONE_TIPSEL);
-    /* Flush to parent? */
-    if (ebone->parent && (ebone->flag & BONE_CONNECTED)) {
-      ebone->parent->flag &= ~BONE_TIPSEL;
-    }
-  }
+  ED_armature_ebone_select_set(ebone, sel);
   WM_event_add_notifier(C, NC_OBJECT | ND_BONE_ACTIVE, CTX_data_edit_object(C));
 }
 static eOLDrawState tree_element_active_ebone(bContext *C,
